# CoffeeTable

./: Cargo.toml  LICENSE.md  README.md
assets/: darcula.tmTheme  gruvbox-custom.tmTheme
src/: agent_cli.rs  app.rs  clipboard.rs  config.rs  db.rs  discovery.rs  git.rs  github.rs  icons.rs  log.rs  main.rs  project.rs  runtime.rs  syntax.rs  token_usage.rs  ui.rs
src/ai/: claude_cli.rs  mod.rs
src/views/: agents.rs  changes.rs  editor.rs  feature_form.rs  file_finder.rs  file_tree.rs  git.rs  github.rs  grep.rs  mod.rs  project_picker.rs  project_view.rs  runtime.rs  terminal.rs
src/views/editor/: edit.rs  mod.rs  modes.rs  motions.rs  mouse.rs  types.rs  widget.rs
