[package]
name = "coffeetable"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
walkdir = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
arboard = "3"
fuzzy-matcher = "0.3"
ignore = "0.4"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
